--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                         </div>
                                     </div>
                                     <div class="right-side-arrow">
-                                        <a href="about"><img src="assets/img/right_arrow.svg" alt="icon" class="injectable"></a>
+                                        <a href="about"><img src="assets/img/icons/right_arrow.svg" alt="icon" class="injectable"></a>
                                     </div>
                                 </div>
                                 <div class="about__list-box-item-two">
@@ -278,7 +278,7 @@
                                         </div>
                                     </div>
                                     <div class="right-side-arrow">
-                                        <a href="about"><img src="assets/img/right_arrow.svg" alt="icon" class="injectable"></a>
+                                        <a href="about"><img src="assets/img/icons/right_arrow.svg" alt="icon" class="injectable"></a>
                                     </div>
                                 </div>
                             </div>
